k8s/ssl.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rbus-gateway
  namespace: rbus
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-rbus
      protocol: HTTP
    hosts:
    - "readbeforeyoushare.com"
    # tls:
    #   httpsRedirect: true
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - "readbeforeyoushare.com"
    tls:
      credentialName: readbeforeyoushare.com
      mode: SIMPLE
# virtual service for SSL challenge
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: readbeforeyoushare-challenge
  namespace: rbus
spec:
  hosts:
  - "readbeforeyoushare.com"
  gateways:
  - rbus-gateway
  http:
  - match:
    - uri:
        prefix: "/.well-known/acme-challenge/"
    route:
    - destination:
        host: cm-acme-http-solver-zr2tw.istio-system.svc.cluster.local
        port:
          number: 8089

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: readbeforeyoushare-challenge
  namespace: istio-system
spec:
  host: cm-acme-http-solver-zr2tw.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
