k8s/wiki.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rbus-wiki-app
  labels:
    app: rbus
    tier: ui
    service: rbus-wiki-app
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: rbus
    tier: ui
    service: rbus-wiki-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbus-wiki-app-dev
  labels:
    app: rbus
    tier: ui
    service: rbus-wiki-app
    version: dev
spec:
  selector:
    matchLabels:
      app: rbus
      tier: ui
      service: rbus-wiki-app
      version: dev
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: rbus
        tier: ui
        service: rbus-wiki-app
        version: dev
    spec:
      containers:
      - name: worker
        image: nvhoanganh1909/wiki:latest
        resources:
          limits:
            cpu: 10m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 50Mi
        ports:
          - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rbus-wiki-app
spec:
  host: rbus-wiki-app
  subsets:
  - name: dev
    labels:
      version: dev
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rbus-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-rbus
      protocol: HTTP
    hosts:
    - "readbeforeyoushare.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rbus-vs
spec:
  hosts:
  - "readbeforeyoushare.com"
  gateways:
  - rbus-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: rbus-wiki-app.rbus.svc.cluster.local
        subset: dev
        port:
          number: 80
